# draft_engine

./: .gitignore  CMakeLists.txt  README.md
build_tools/: CMakeLists.txt
build_tools/include/draft/build_tools/: apak_writer.hpp  asset_pipeline.hpp  game_context.hpp  game_module.hpp  game_module_loader.hpp  project_exporter.hpp  project_manifest.hpp  project_packer.hpp
build_tools/src/cli/: commands.hpp  main.cpp
build_tools/src/draft/build_tools/: apak_writer.cpp  asset_pipeline.cpp  game_module_loader.cpp  project_exporter.cpp  project_manifest.cpp  project_packer.cpp
build_tools/src/export/: main.cpp
build_tools/src/launcher/: main.cpp
build_tools/src/manifest/: main.cpp
build_tools/src/pack/: main.cpp
build_tools/src/validate/: main.cpp
build_tools/tests/draft/build_tools/: apak_writer.test.cpp  asset_pipeline.test.cpp
common/: CMakeLists.txt
common/assets/shaders/default/: fragment.glsl  vertex.glsl
common/assets/shaders/shapes/: fragment.glsl  vertex.glsl
common/assets/shaders/text/: vertex.glsl
common/include/draft/math/: bounds.hpp  color.hpp  funcs.hpp  glm.hpp  glm_serializer.hpp  rect.hpp
common/include/draft/util/: circular_buffer.hpp  clock.hpp  json.hpp  localization.hpp  logger.hpp  reflectable.hpp  serializer.hpp  serializer_containers.hpp  time.hpp
common/src/draft/math/: bounds.cpp  color.cpp  glm.cpp
common/src/draft/util/: clock.cpp  json.cpp  localization.cpp  logger.cpp  time.cpp
common/tests/draft/math/: bounds.test.cpp  color.test.cpp  funcs.test.cpp  glm.test.cpp  glm_serializer.test.cpp  rect.test.cpp
common/tests/draft/util/: circular_buffer.test.cpp  clock.test.cpp  json.test.cpp  localization.test.cpp  logger.test.cpp  reflectable.test.cpp  serializer.test.cpp  serializer_context.test.cpp  time.test.cpp
editor/: CMakeLists.txt
editor/include/draft/editor/: asset_drag_drop.hpp  build_actions.hpp  editor_application.hpp  editor_settings.hpp  field_widgets.hpp  freecam_controller.hpp  game_module_watcher.hpp  prefab.hpp  project.hpp  selection.hpp
editor/src/: main.cpp
editor/src/draft/editor/: asset_drag_drop.cpp  build_actions.cpp  editor_application.cpp  field_widgets.cpp  freecam_controller.cpp  game_module_watcher.cpp  prefab.cpp  project.cpp  selection.cpp
runtime/: CMakeLists.txt
runtime/include/draft/aliasing/: attachment.hpp  filter.hpp  format.hpp  framebuffer.hpp  parameter.hpp  target.hpp  wrap.hpp
runtime/include/draft/asset/: asset_manager.hpp  default_loaders.hpp  resource.hpp
runtime/include/draft/audio/: listener.hpp  music.hpp  sound.hpp  sound_buffer.hpp
runtime/include/draft/components/: animation_component.hpp  audio_components.hpp  camera_component.hpp  collider_component.hpp  joint_component.hpp  rigid_body_component.hpp  sprite_component.hpp  tag_component.hpp  texture_component.hpp  transform_component.hpp
runtime/include/draft/core/: application.hpp  application_interface.hpp  command_catalog.hpp  crash_handler.hpp  engine.hpp  sub_application.hpp
runtime/include/draft/ecs/: audio_system.hpp  component_catalog.hpp  entity.hpp  physics_system.hpp  registry.hpp  relationship_components.hpp  relationship_system.hpp  render_system.hpp  scene.hpp  scene_serialization_context.hpp  scene_serializer.hpp  system.hpp  system_catalog.hpp
runtime/include/draft/input/: action.hpp  event.hpp  input_manager.hpp  keyboard.hpp  mouse.hpp
runtime/include/draft/phys/: body_def.hpp  collider.hpp  filter.hpp  fixture.hpp  fixture_def.hpp  joint_data.hpp  joint_def.hpp  raycast_props.hpp  rigid_body.hpp  world.hpp
runtime/include/draft/physics/: body_def.hpp  body_type.hpp  collider.hpp  fixture.hpp  fixture_def.hpp  joint.hpp  joint_def.hpp  mass_data.hpp  raycast_props.hpp  rigid_body.hpp  world.hpp
runtime/include/draft/rendering/: animation.hpp  camera.hpp  clip.hpp  font.hpp  frame_buffer.hpp  image.hpp  material.hpp  mesh.hpp  model.hpp  particle_system.hpp  render_layer.hpp  render_state.hpp  render_target.hpp  render_window.hpp  shader.hpp  shader_buffer.hpp  texture.hpp  texture_packer.hpp  vertex_array.hpp  window.hpp
runtime/src/draft/aliasing/: format.cpp
runtime/src/draft/asset/: asset_manager.cpp  default_loaders.cpp
runtime/src/draft/audio/: listener.cpp  music.cpp  sound.cpp  sound_buffer.cpp
runtime/src/draft/core/: application.cpp  application_interface.cpp  command_catalog.cpp  crash_handler.cpp  engine.cpp  sub_application.cpp
runtime/src/draft/ecs/: audio_system.cpp  entity.cpp  physics_system.cpp  relationship_system.cpp  render_system.cpp  scene.cpp  scene_serializer.cpp  system.cpp
runtime/src/draft/input/: input_manager.cpp  keyboard.cpp  mouse.cpp
runtime/src/draft/phys/: b2_raycast_proxy.cpp  b2_raycast_proxy_p.hpp  collider.cpp  conversions.cpp  conversions_p.hpp  fixture.cpp  joint.cpp  rigid_body.cpp  vector2_p.hpp  world.cpp
runtime/src/draft/physics/: b2_raycast_proxy.cpp  b2_raycast_proxy_p.hpp  collider.cpp  conversions.cpp  conversions_p.hpp  fixture.cpp  joint.cpp  rigid_body.cpp  world.cpp
runtime/src/draft/rendering/: animation.cpp  camera.cpp  clip.cpp  font.cpp  frame_buffer.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  particle_system.cpp  phys_renderer_p.cpp  phys_renderer_p.hpp  render_window.cpp  shader.cpp  stb_image_impl.cpp  texture.cpp  texture_packer.cpp  vertex_array.cpp  window.cpp
runtime/tests/draft/aliasing/: format.test.cpp
runtime/tests/draft/asset/: asset_manager.test.cpp  resource.test.cpp  resource_serializer.test.cpp
runtime/tests/draft/audio/: listener.test.cpp  music.test.cpp  sound.test.cpp  sound_buffer.test.cpp  wav_test_helper.hpp
runtime/tests/draft/components/: camera_component.test.cpp  collider_component.test.cpp  joint_component.test.cpp  rigid_body_component.test.cpp  sprite_component.test.cpp
runtime/tests/draft/core/: application.test.cpp  engine.test.cpp
runtime/tests/draft/ecs/: audio_system.test.cpp  component_catalog.test.cpp  entity.test.cpp  entity_serializer.test.cpp  physics_system.test.cpp  relationship_system.test.cpp  render_system.test.cpp  scene.test.cpp  (+3 more)
(+671 files in other folders)
